Uniformisation : GET partout

--- a/css/lettre.scss
+++ b/css/lettre.scss
@@ -18,6 +18,9 @@ form {
 	border: 2px dotted black;
 	padding: 2em;
 	margin-top: 1em;
+	h2 {
+		margin-top: 0;
+	}
 }
 nav {
 	background-color: #330;
