--- a/css/lettre.css
+++ b/css/lettre.css
@@ -17,6 +17,21 @@ header {
   text-align: center;
 }
 
+footer {
+  -webkit-box-ordinal-group: 1001;
+      -ms-flex-order: 1000;
+          order: 1000;
+  background-color: black;
+  color: white;
+  padding: .5em 1em;
+}
+
+.app {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
 form {
   border: 2px dotted black;
   padding: 2em;
