--- a/css/lettre.css
+++ b/css/lettre.css
@@ -9,22 +9,20 @@ body {
   margin: 0;
   background-color: #fffff8;
   background-image: url(../images/motif_encre.svg);
-  font-family: 'Noto Serif TC', serif;
+  font-family: "Noto Serif TC", serif;
 }
-
 body.exemple::before {
   content: "EXEMPLE";
   position: absolute;
   right: 1em;
   color: red;
-  border: .2em dashed;
+  border: 0.2em dashed;
   font-size: 4em;
   font-family: monospace;
-  padding: .5em;
-  border-radius: .5em;
+  padding: 0.5em;
+  border-radius: 0.5em;
   font-weight: bold;
-  -webkit-transform: rotate(15deg);
-          transform: rotate(15deg);
+  transform: rotate(15deg);
 }
 
 header {
@@ -33,19 +31,15 @@ header {
 }
 
 footer {
-  -webkit-box-ordinal-group: 1001;
-      -ms-flex-order: 1000;
-          order: 1000;
+  order: 1000;
   background-color: black;
   color: white;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   margin-top: 1em;
 }
 
 .app {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 
 form {
@@ -53,7 +47,6 @@ form {
   padding: 2em;
   margin-top: 1em;
 }
-
 form h2 {
   margin-top: 0;
 }
@@ -62,32 +55,21 @@ nav {
   background-color: #330;
   color: white;
 }
-
 nav ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 nav a {
   color: inherit;
   text-decoration: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   padding: 1em;
 }
-
 nav li.courant {
   background-color: #cc9;
   color: black;
@@ -95,13 +77,8 @@ nav li.courant {
 
 .interface {
   min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   width: 960px;
   margin: 0 auto;
 }
@@ -111,17 +88,14 @@ h2 {
 }
 
 div.lettre {
-  font-family: 'Caveat', cursive;
+  font-family: "Caveat", cursive;
   font-size: 20pt;
   width: 8.5in;
   height: 11in;
   margin: 0 auto;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 3em;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background-color: #f7f5eb;
-  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-}
-/*# sourceMappingURL=lettre.css.map */
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}/*# sourceMappingURL=lettre.css.map */
